source/client/styles/settings.css
#settings-container {
    display: flex;
    align-items: flex-start;
    padding: 2rem;
    gap: 3rem;
}

#settings-container > section {
    position: relative;
    width: 60rem;
    border-radius: 1.25rem;
    color: var(--white);
}

#settings-sidebar nav {    
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 1rem;
}

#settings-sidebar button {
    width: 7.5rem;
    height: calc(0.4 * 7.5rem);
    font-size: 1.125rem;
    border-radius: var(--border-radius);
}

#settings-container > section:not(.active) {
    display: none !important;
}

#volume_settings {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 2rem;
}

#music_volume_slider, #sfx_volume_slider {
    width: 100%;
}

#profile_settings {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 2rem;
}

#profile_settings_identity {
    display: grid;
    column-gap: 2rem;
    row-gap: 0.5rem;
    grid-auto-flow: column;
    grid-template-rows: repeat(2, auto);
    grid-template-columns: auto 1fr;
}

#profile_settings_avatar {
    width: 7.5rem;
    height: 7.5rem;
    padding: 0.25rem;
    background-color: var(--background-color);
    border-radius: 50%;
}

#change_image_button_wrapper {
    display: flex;
    justify-content: center;
}

#change_image_button {
    font-size: 1rem;
    border: none;
    background: none;
    color: var(--yellow);
}

#profile_settings_username_wrapper {
    display: flex;
    align-items: center;
}

#profile_settings_username {
    width: 20rem;
}

#information-card-list {
    padding: 2rem;
    height: 32rem;
    overflow-y: auto;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}

#information_settings::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1;
    pointer-events: none;
    width: 96.5%;
    height: 25%;
    border-radius: var(--border-radius);
    background-image: linear-gradient(#44235b00, #44235bBF,#44235bFF, #44235bFF);
}

#information-card-list > div {
    margin: 0;
}

#information_settings img {
    width: 8rem;
    height: 14rem;
}

.sword-slider {
    position: relative;
}

.sword-slider img {
    height: 100%;
    position: absolute;
    z-index: -3;
    transform: translateX(-15rem);
    transition: transform 250ms ease-in-out;
}

.sword-slider.active img {
    transform: translateX(-2rem);
}

.sword-slider .button-translation-wrapper {
    transition: var(--default-transform-transition);
    transition-delay: 125ms;
}

.sword-slider.active .button-translation-wrapper {
    transform: translateX(1.25rem);
}

#profile_settings_control_wrapper {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
}

#profile_settings_control_wrapper button {
    font-size: 1rem;
    border-radius: var(--border-radius);
}

#save_failed_msg {
    color: var(--red);
}

#save_successful_msg {
    color: var(--yellow);
}

